Add publish to our maven repo